Security part completed